--- a/1/1.2/1.2.torch.autograd的简要介绍.ipynb
+++ b/1/1.2/1.2.torch.autograd的简要介绍.ipynb
@@ -510,7 +510,7 @@
    "source": [
     "## 6.从 DAG 中排除\n",
     "\n",
-    "```torch.autograd``` 跟踪所有将其 ```requires_grad``` 标志设置为 ```True``` 的张量的操作。 对于不需要梯度的张量，将此属性设置为 ```False``` 会将其从梯度计算 DAG 中排除。\n",
+    "***```torch.autograd``` 跟踪所有将其 ```requires_grad``` 标志设置为 ```True``` 的张量的操作。*** 对于不需要梯度的张量，将此属性设置为 ```False``` 会将其从梯度计算 DAG 中排除。\n",
     "\n",
     "即使只有一个输入张量具有 ```requires_grad=True``` ，操作的输出张量也将需要梯度。"
    ]
